<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- dialog bucket time -->
    <string name="exception_label">Use exceptions to quickly identify any devices with potential issues.\nA device displays as an exception if it meets any of the following conditions:</string>
    <string name="exception_message"> &#8226; Battery has less than 20% life remaining\n&#8226; Low signal warning (-60 to -99dB). A signal between -60 and -70 dB\n\t is acceptable, but will show as a warning.\n&#8226; Cue missing continuity, but in script\n&#8226; Cue has continuity, but not in script\n&#8226; Armed modules with key in TEST position</string>
    <string name="header_channel_label">Filter By Ch.:</string>
    <string name="header_module_label">Filter By Mode:</string>
    <string name="continuity_lagend_header">Help text for continuity:</string>
    <string name="continuity_lagend_title">Green - \"Continuity Good\": The cue has good continuity. If you have a script loaded in the remote, this cue is also in a script.\n\nYellow - \"Continuity Good, Not in Script\": The cue has good continuity, but is not in your script.\n\nRed - \"No Continuity, In Script\": The cue does not have good continuity and is also in your script.\n\nGray - \"No Continuity\": The cue does not have any continuity and is not in your script.</string>
    <string name="edit_time">enter time in miliseconds</string>
    <string name="btn_addtime">Add TIME</string>
    <string name="btn_close">Close</string>
    <string name="app_name">Cobra</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_fragment_modulelist">ModuleListFragment</string>
    <string name="addr_">Addr.</string>
    <string name="ch_">Ch.</string>
    <string name="key_pos_">Key Pos.</string>
    <string name="mode">Mode</string>
    <string name="_2p">2P</string>
    <string name="_1p">1P</string>
    <string name="sig_">Sig.</string>
    <string name="continuity">Continuity</string>

    <!-- bucketfiring.xml -->
    <string name="firing_modules">Firing Modules</string>
    <string name="add_new_bucket">+ Add New Bucket</string>
    <string name="clear_buckets">Clear Buckets</string>
    <string name="time_elapsed">Time Elapsed:</string>
    <string name="time_elapsed_text">00:00:00.0s</string>
    <string name="est_show_time">Est. Show Time:</string>
    <string name="est_show_time_text">00:00:00.0s</string>
    <string name="cues">Cues:</string>
    <string name="cues_text">0 Fired, 0 Remain</string>
    <string name="cadence">Cadence</string>
    <string name="cadence_text">10.3 shots / min.</string>
    <string name="arm">ARM</string>
    <string name="force_refresh">Force Refresh</string>

    <!-- list_Item_bucket_new.xml -->
    <string name="list_item_bucket_new">Drag and drop firing modules into this area to create new buckets.</string>

    <!-- list_item_bucket.xml -->
    <string name="fire">    Fire    </string>
    <string name="pause">    Pause    </string>
    <string name="fired">Fired:</string>
    <string name="time">TIME:</string>
    <string name="fired_text">0</string>
    <string name="ms_text">ms</string>
    <string name="remain">Remain:</string>
    <string name="remain_text">30</string>
    <string name="bucket_name">1</string>
    <string name="add_label">Add label</string>
    <string name="cue_red_text">If Cue is fired.</string>
    <string name="cue_green_text">If Cue is available.</string>
    <string name="cue_grey_text">If Cue is already assigned.</string>
    <string name="cue_1">1</string>
    <string name="cue_2">2</string>
    <string name="cue_3">3</string>
    <string name="cue_4">4</string>
    <string name="cue_5">5</string>
    <string name="cue_6">6</string>
    <string name="cue_7">7</string>
    <string name="cue_8">8</string>
    <string name="cue_9">9</string>
    <string name="cue_10">10</string>
    <string name="cue_11">11</string>
    <string name="cue_12">12</string>
    <string name="cue_13">13</string>
    <string name="cue_14">14</string>
    <string name="cue_15">15</string>
    <string name="cue_16">16</string>
    <string name="cue_17">17</string>
    <string name="cue_18">18</string>

    <string-array name="array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>

    <!-- MODULE ROW -->
    <string name="moduel_row_device">Device</string>
    <string name="moduel_row_ch">Ch.</string>
    <string name="moduel_row_addr">Addr.</string>
    <string name="moduel_row_key_pos">Key Pos.</string>
    <string name="moduel_row_mode">Mode</string>
    <string name="moduel_row_sig">Sig.</string>
    <string name="moduel_row_1p">1P</string>
    <string name="moduel_row_2p">2P</string>

    <!-- MODULE LIST -->
    <string name="module_list_excepitons"># Exceptions</string>
    <string name="module_list_header_channel_label">Filter By Channel:</string>
    <string name="module_list_header_all">All</string>
    <string name="module_list_header_module_label">Filter By Mode:</string>
    <string name="module_list_header_clear_filter">Clear Filters</string>
    <string name="module_list_btn_force_refresh">Refresh Device List</string>
    <string name="module_list_dev">Dev.</string>
    <string name="module_list_addr">Addr.</string>
    <string name="module_list_ch">Ch.</string>
    <string name="module_list_key_pos">Key Pos.</string>
    <string name="module_list_mode">Mode</string>
    <string name="module_list_sig">Sig.</string>
    <string name="module_list_1p">1P</string>
    <string name="module_list_2p">2P</string>
    <string name="module_list_continuity">Continuity</string>
    <string name="module_list_continuity_desc">Need help?</string>

    <!-- DIALOG CHANNEL GRID -->
    <string name="dialog_channelgrid_showall">Show All</string>

    <!-- DIALOG SCRIPT QUES -->

    <string name="script_cues_txt">Script:</string>
    <string name="channel_cues_txt">Channel:</string>
    <string name="dialog_close_cues_txt">Close</string>
    <string name="dialog_refresh_cues_txt">Refresh</string>
    <string name="in_head_cue">Cue</string>
    <string name="in_head_event_time">Event Time</string>
    <string name="in_head_description">Description</string>

    <!-- DIALOG ABOUT -->
    <string name="d_about_cntrl_pnl">Control Panel Firmware</string>
    <string name="d_about_dvc_type">Device Type</string>
    <string name="d_about_18r2_frm">18R2 Firmware</string>
    <string name="d_about_close">Close</string>
    <string name="d_about_ui_class">UI Classification</string>
    <string name="d_about_ui_folder">drawable</string>

    <!-- DIALOG WRONG SCRIPT -->
    <string name="d_wrong_sript_stop">Stop Script</string>
    <string name="d_wrong_sript_continue">Continue Script and Goto Script: </string>

    <!-- DIALOG DISCONNECT NO DEVICE -->
    <string name="d_disconnect_msg1">We are unable to detect your Android device.</string>
    <string name="d_disconnect_msg2">Please try the following troubleshooting steps:</string>
    <string name="d_disconnect_msg3">&#x2022; Confirm your 18R2 is powered on and connected via USB to your Android device</string>
    <string name="d_disconnect_msg4">&#x2022; Confirm your USB cable is a special USB to micro USB OTG (on-the-go)</string>
    <string name="d_disconnect_msg5">&#x2022; Disconnect and re-connect your USB cables</string>
    <string name="d_disconnect_msg6">&#x2022; If you\&#39;re still not connecting, re-start your 18R2 and wait 10 seconds</string>
    <string name="d_disconnect_msg7">&#x2022; Still not connecting? Contact Scott Smith at 518-222-7410 or ssmith@cobrafiringsystems.com</string>

    <!-- DIALOG DISCONNECT -->
    <string name="d_disconnectshow_msg1">We are unable to detect your Android device.</string>
    <string name="d_disconnectshow_msg2">Please try the following troubleshooting steps:</string>
    <string name="d_disconnectshow_msg3">&#x2022; Disconnect and re-connect your USB cables</string>
    <string name="d_disconnectshow_msg4">&#x2022; If you\&#39;re still not connecting, re-start your 18R2 and wait 10 seconds</string>
    <string name="d_disconnectshow_msg5">&#x2022; Still not connecting? Contact Scott Smith at 518-222-7410 or ssmith@cobrafiringsystems.com</string>

    <!-- Show Control -->
    <string name="show_control_script_not_loading_msg">No Scripts</string>

    <!-- DIALOG SUCCESS -->
    <string name="dialog_success_title_text">Success!</string>
    <string name="dialog_success_text1">Your Android device has successfully connected to the 18R2 and is approved for use.</string>
    <string name="dialog_success_text2">To help learn about the Control Panel, proceed below with our demonstration including some dummy modules and scripts.</string>
    <string name="dialog_success_text3">Any questions, contact Scott Smith at 518-222-7410 or ssmith@cobrafiringsystems.com.</string>

    <!-- DIALOG OPPS -->
    <string name="d_opps_main_msg">We noticed your Android had been connected to the 18R2 prior to installing the COBRA Control Panel. Please perform the following:</string>
    <string name="d_opps_msg1">1) Disconnect the USB cable from the 18R2.</string>
    <string name="d_opps_msg2">2) Press the Close button in the upper-right of this pop-up and re-start the Control Panel app.</string>

</resources>