<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_top"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="#95000000"
    android:clickable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="7" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        android:clickable="false"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="4"
        android:clickable="false"
        android:orientation="horizontal"
        android:weightSum="5.5" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:orientation="horizontal" >
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="3.5"
            android:background="@drawable/corner"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/layout_infocontainer"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/btn_layout"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity=""
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/btn_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/dialog_dissconnect_button_close"
                    android:gravity="center"
                    android:text="@string/dialog_close_cues_txt"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/showcontrols_textsize" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true" >

                    <ImageView
                        android:id="@+id/opps_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/opps_dialog_icon" />

                    <TextView
                        android:id="@+id/value_wrong_script_msg1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/opps_icon"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:paddingTop="20dp"
                        android:text="@string/d_disconnect_msg1"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/showcontrols_textsize_script" />

                    <TextView
                        android:id="@+id/value_wrong_script_msg2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/opps_icon"
                        android:gravity="left"
                        android:paddingLeft="20dp"
                        android:paddingTop="5dp"
                        android:text="@string/d_disconnect_msg2"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/showcontrols_textsize_small" />

                    <TextView
                        android:id="@+id/value_wrong_script_msg3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/value_wrong_script_msg2"
                        android:gravity="left"
                        android:paddingLeft="20dp"
                        android:paddingTop="5dp"
                        android:text="@string/d_disconnect_msg3"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/showcontrols_textsize_small" />

                    <TextView
                        android:id="@+id/value_wrong_script_msg4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/value_wrong_script_msg3"
                        android:gravity="left"
                        android:paddingLeft="20dp"
                        android:text="@string/d_disconnect_msg4"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/showcontrols_textsize_small" />

                    <TextView
                        android:id="@+id/value_wrong_script_msg5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/value_wrong_script_msg4"
                        android:gravity="left"
                        android:paddingLeft="20dp"
                        android:text="@string/d_disconnect_msg5"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/showcontrols_textsize_small" />

                    <TextView
                        android:id="@+id/value_wrong_script_msg6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/value_wrong_script_msg5"
                        android:gravity="left"
                        android:paddingLeft="20dp"
                        android:text="@string/d_disconnect_msg6"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/showcontrols_textsize_small" />

                    <TextView
                        android:id="@+id/value_wrong_script_msg7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/value_wrong_script_msg6"
                        android:gravity="left"
                        android:paddingLeft="20dp"
                        android:text="@string/d_disconnect_msg7"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/showcontrols_textsize_small" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/btn_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="3" >

                <Button
                    android:id="@+id/btn_stop_script"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/d_wrong_sript_stop"
                    android:textSize="@dimen/showcontrols_textsize"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_continue_script"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/d_wrong_sript_continue"
                    android:textSize="@dimen/showcontrols_textsize"
                    android:visibility="gone" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:orientation="horizontal" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        android:clickable="false"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>