<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="380dp"
    android:background="#EEEEEE"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="5" >

    <ListView
        android:id="@+id/list_time"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="3" >
    </ListView>

    <LinearLayout
        android:id="@+id/layout_tag_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="4" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="OTHER" />

        <EditText
            android:id="@+id/edit_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:digits="0123456789"
            android:gravity="center_horizontal"
            android:hint="@string/edit_time" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="2" >

        <Button
            android:id="@+id/btn_addtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_addtime" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_close" />
    </LinearLayout>

</LinearLayout>